fixing weird spacing issue by removing padding - it may have been triggered by frontpage-wrapper

--- a/contents/styles/main.scss
+++ b/contents/styles/main.scss
@@ -149,7 +149,7 @@ div.frontwrapper {
 
 div.frontpage {
   float: left;
-  padding: 20px;
+  padding: 20px 0 20px 0;
   text-align: center;
   vertical-align: middle;
   font-size: 65px;
